cambio titulo index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/mixins.css">
     <script src="https://kit.fontawesome.com/a00c2b67f0.js" crossorigin="anonymous"></script>
-    <title>nuevor u e d a *</title>
+    <title>r u e d a *</title>
 </head>
 
 <body>
